@@ -4,7 +4,7 @@
 %Document -impose and friends (inc. 0-w, 0-h for long ones, how lines scale etc., undefined if pages different sizes)
 %Document -bookmarks-json including mentioning UTF8
 %Document -list-annotations-json
-%Document -replace-dict-entry and search extension to -remove-dict-entry
+%Document -replace-dict-entry and search extension to -remove-dict-entry, and -print-dict-entry
 \documentclass{book}
 % Edit here to produce cpdfmanual.pdf, cpdflibmanual.pdf, pycpdfmanual.pdf etc.
 \usepackage{comment}\excludecomment{cpdflib}\excludecomment{pycpdflib}
